tests/baselines/reference/parserInterfaceDeclaration5.errors.txt
tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration5.ts(1,1): error TS1045: A 'declare' modifier cannot be used with an interface declaration.


==== tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration5.ts (1 errors) ====
    declare interface I {
    ~~~~~~~
!!! error TS1045: A 'declare' modifier cannot be used with an interface declaration.
    }